--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,18 @@ REVENIUM_METERING_BASE_URL=https://api.revenium.ai
 PERPLEXITY_API_KEY=pplx_your_perplexity_api_key_here
 PERPLEXITY_API_BASE_URL=https://api.perplexity.ai
 
+# Trace Visualization Fields (Optional)
+REVENIUM_ENVIRONMENT=production
+REVENIUM_REGION=us-east-1
+REVENIUM_CREDENTIAL_ALIAS=Perplexity Production Key
+REVENIUM_TRACE_TYPE=customer_support
+REVENIUM_TRACE_NAME=Support Ticket #12345
+REVENIUM_PARENT_TRANSACTION_ID=parent-txn-123
+REVENIUM_TRANSACTION_NAME=Answer Customer Question
+REVENIUM_RETRY_NUMBER=0
+
 # Debug Configuration (Optional)
-REVENIUM_DEBUG=false                        # Set to true to enable debug logging
+REVENIUM_DEBUG=false
+
+# AWS Region Detection (Optional - auto-detected if not set)
+AWS_REGION=us-east-1
