--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@revenium/perplexity",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "NodeJS middleware for Perplexity AI API with Revenium metering",
   "homepage": "https://github.com/revenium/revenium-middleware-perplexity-node#readme",
   "bugs": {
@@ -46,7 +46,7 @@
     "example:metadata": "npx tsx examples/metadata.ts",
     "example:advanced": "npx tsx examples/advanced.ts",
     "example:stream": "npx tsx examples/stream.ts",
-    "test": "npm run example:getting-started && npm run example:stream"
+    "example": "npm run example:getting-started"
   },
   "keywords": [
     "revenium",
@@ -66,11 +66,13 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "dotenv": "^17.2.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
+    "openai": "^5.23.2",
     "tsx": "^4.19.2",
     "typescript": "^5.9.2"
   },
