FRONT-494: Complete prompt capture synchronization

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,9 @@ REVENIUM_RETRY_NUMBER=0
 # Debug Configuration (Optional)
 REVENIUM_DEBUG=false
 
+# Prompt Capture Configuration (Optional)
+# REVENIUM_CAPTURE_PROMPTS=false
+# REVENIUM_MAX_PROMPT_SIZE=50000
+
 # AWS Region Detection (Optional - auto-detected if not set)
 AWS_REGION=us-east-1
